end section promo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,2 +1,2 @@
-*{font-family:"MuseoSansCyrl", sans-serif}
+*{font-family:"MuseoSansCyrl", sans-serif}.conteiner{width:950px;margin:0 auto}.promo{min-height:650px;padding:21px 0 93px 0;background:url(../../img/bg/bg1.jpg) center center/cover no-repeat}.header{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.header__logo{min-width:250px}.header__logo img{width:100%}
 /*# sourceMappingURL=style.css.map */
