--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,11 @@
 @import "base/variables";
 * {
-	font-family: "MuseoSansCyrl", sans-serif;
+	font-family: "MuseoSansCyrl", sans-serif; 
 }
+.conteiner {
+	width: 950px;
+	margin: 0 auto;
+}
+@import "blocks/promo";
+@import "blocks/header";
+@import "blocks/buttons";
