--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "base/variables";
+
 * {
 	font-family: "MuseoSansCyrl", sans-serif; 
 }
@@ -9,3 +10,5 @@
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
+@import "blocks/advantage";
+@import "base/media.scss";
