--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,12 @@
 @import "blocks/header";
 @import "blocks/buttons";
 @import "blocks/advantage";
+@import "blocks/consultation";
+@import "blocks/forms";
+@import "blocks/titles";
+
+
+
+
+
 @import "base/media.scss";
