--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -85,8 +85,6 @@
 		&__comment {
 			font-size: 11px;
 		}
-	
-
 	.title {
 		&__left-mobile {
 			font-size: 30px;
@@ -108,6 +106,54 @@
 			width: 100%;
 			font-size: 14px;
 		}
+	}
+	.carousel {
+		&__inner {
+			width: 500px;
+			margin: 0 auto;
+			img {
+				width: 100%;
+			}
+		}
+	}
+	.comments {
+		&__wrapper {
+		margin-top: 70px;
+		}
+	.comment {
+		display: flex;
+		justify-content: flex-start;
+		margin-bottom: 100px;
+		&:nth-child(3) {
+			margin-bottom: 71px;
+		}
+		&__foto {
+			width: 169px;
+			height: 169px;
+			background-color: #0d0d0d;
+			border-radius: 84.5px;
+		}
+		&__content {
+			margin-left: 62px;
+		}
+		&__name {
+			font-size: 18px;
+			font-weight: 700;
+			color: #0d0d0d;
+		}
+		&__marathon {
+			font-size: 14px;
+			font-weight: 300;
+			color: #646464;
+		}
+		&__descr {
+			font-size: 16px;
+			line-height: 1.2;
+			font-weight: 300;
+			color: #0d0d0d;
+			margin-top: 19px;
+		}
+	}	
 	}
 
 }
@@ -213,6 +259,63 @@
 			height: 45px;
 		}
 	}
+	.carousel {
+		&__inner {
+			width: 300px;
+			margin: 0 auto;
+			img {
+				width: 100%;
+			}
+		}
+	}
+	.catalog {
+		&__tabs {
+			display: flex;
+			flex-direction: column;
+			margin-top: 40px;	
+		}
+		&__tab {
+		width: 200px;
+		height: 45px;
+		font-size: 16px;
+		line-height: 42px;
+		margin-bottom: 10px;
+		}
+		&__content-active {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	.comments {
+		.title {
+			font-size: 18px;
+		}
+		.comment {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-bottom: 0;
+			text-align: center;
+			&:nth-child(3) {
+				margin-bottom: 0;
+			}
+			&__content {
+				margin-left: 0;
+				margin: 30px 40px;
+			}
+			&__foto {
+				width: 130px;
+				height: 130px;
+				img {
+					width: 100%;
+					height: 100%;
+				}
+			}
+			&__descr {
+				margin-bottom: 30px;
+			}
+		}
+	}
 }
 @media (min-width: 320px) and (max-width: 575px) {
 	.conteiner {
@@ -282,10 +385,10 @@
 	}
 	.advantage {
 		padding: 40px 0 78px 0;
-		.title {
-			&-mobile {
-				font-size: 18px;
-			}
+	.title {
+		&-mobile {
+			font-size: 18px;
+		}
 		}
 		&__blocks {
 			flex-direction: column;
@@ -338,6 +441,66 @@
 		}
 		input {
 			height: 40px;
+		}
+	}
+	.carousel {
+		&__inner {
+			width: 250px;
+			margin: 0 auto;
+			img {
+				width: 100%;
+			}
+		}
+	}
+	.catalog {
+		h2 {
+			font-size: 18px;
+		}
+		&__tabs {
+			display: flex;
+			flex-direction: column;
+			margin-top: 40px;	
+		}
+		&__tab {
+		width: 200px;
+		height: 45px;
+		font-size: 16px;
+		line-height: 42px;
+		margin-bottom: 10px;
+		}
+		&__content-active {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	.comments {
+		.title {
+			font-size: 18px;
+		}
+		.comment {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-bottom: 0;
+			text-align: center;
+			&:nth-child(3) {
+				margin-bottom: 0;
+			}
+			&__content {
+				margin-left: 0;
+				margin: 20px 30px;
+			}
+			&__foto {
+				width: 130px;
+				height: 130px;
+				img {
+					width: 100%;
+					height: 100%;
+				}
+			}
+			&__descr {
+				margin-bottom: 30px;
+			}
 		}
 	}
 }
