--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -18,7 +18,7 @@
 	&__close {
 		position: absolute;
 		top: 0;
-		right: 40px;
+		right: -40px;
 		font-size: 40px;
 		line-height: 21px;
 		color: $main-color;
@@ -44,6 +44,11 @@
 	.error {
 		border: 1px solid red;
 	}
+	label.error {
+		border: none;
+		text-align: center;
+		margin-bottom: 15px;
+   }
 }
 
 
