осталось проверить скорость загрузки

--- a/src/sass/blocks/_advantage.scss
+++ b/src/sass/blocks/_advantage.scss
@@ -42,4 +42,12 @@
 			color: #ff0000;
 		}
 	}
+	&__icon {
+		&-animated {
+			animation: heartbeat 1.5s ease infinite;
+			&:hover {
+				animation-play-state: paused;
+			}
+		}
+	}
 }
