--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "base/variables";
+@import "base/animations";
 
 * {
 	font-family: "MuseoSansCyrl", sans-serif; 
@@ -19,6 +20,7 @@
 @import "blocks/comments";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/pageup";
 
 
 
